--- a/Export_BEM_PDF.qmd
+++ b/Export_BEM_PDF.qmd
@@ -7,8 +7,7 @@ format:
 ---
 
 ```{r, include=FALSE}
-source("Script agrupado y nominal.R")
-
+source("0.R")
 ```
 
 \renewcommand{\contentsname}{Índice}
@@ -18,7 +17,7 @@ source("Script agrupado y nominal.R")
 
 ## Introducción
 
-Este boletín es realizado por la Dirección General de Epidemiología con periodicidad mensual. Está dirigido a los equipos de asistencia, gestión y vigilancia en salud y se encuentra disponible para la comunidad interesada en la página web del Ministerio de Salud de la provincia del Neuquén. Su propósito es ofrecer información actualizada sobre los eventos sanitarios enmarcados a nivel nacional como de notificación obligatoria. El mismo se construye de manera colectiva e interdisciplinaria y es posible gracias al aporte de todos los actores involucrados en cada uno de los niveles de atención y gestión; al compromiso de los efectores de salud públicos y privados que se involucran en esta tarea, y al intercambio permanente con las distintas coordinaciones de las regiones de nuestra provincia. En cuanto a la organización del presente documento, se destacan dos secciones. En la primera de ellas se presentan los datos de los eventos sanitarios que se monitorean de manera rutinaria y que se actualizan mes a mes. En la segunda, se desarrolla un evento priorizado por su importancia estacional o de gestión, tanto a nivel provincial como nacional, el cual se modifica mensualmente. A continuación, se analizan los datos de la #ESTO TIENE QUE SER UN OBJETO## semana epidemiológica (SE) 44 a SE 47 de los años 2020 - 2024.
+Este boletín es realizado por la Dirección General de Epidemiología con periodicidad mensual. Está dirigido a los equipos de asistencia, gestión y vigilancia en salud y se encuentra disponible para la comunidad interesada en la página web del Ministerio de Salud de la provincia del Neuquén. Su propósito es ofrecer información actualizada sobre los eventos sanitarios enmarcados a nivel nacional como de notificación obligatoria. El mismo se construye de manera colectiva e interdisciplinaria y es posible gracias al aporte de todos los actores involucrados en cada uno de los niveles de atención y gestión; al compromiso de los efectores de salud públicos y privados que se involucran en esta tarea, y al intercambio permanente con las distintas coordinaciones de las regiones de nuestra provincia. En cuanto a la organización del presente documento, se destacan dos secciones. En la primera de ellas se presentan los datos de los eventos sanitarios que se monitorean de manera rutinaria y que se actualizan mes a mes. En la segunda, se desarrolla un evento priorizado por su importancia estacional o de gestión, tanto a nivel provincial como nacional, el cual se modifica mensualmente. A continuación, se analizan los datos de las semanas epidemiológicas (SE) `r SE_BEM` de los años 2020 - `r ANIO_max`.
 
 ## **Consideraciones metodológicas**
 
@@ -35,7 +34,7 @@ La última actualización del Manual de Normas y Procedimientos de Vigilancia y 
 **Modificaciones implementadas en los ENO**
 
 | Evento | Año de implementación | Modalidad actual de notificación |
-|----|----|----|
+|------------------------|------------------------|------------------------|
 | Parotiditis | 2023 | Nominal individualizada |
 | Internaciones por IRAG[^3] | 2023 | Nominal individualizada |
 | Lesiones en el hogar | 2023 | Sólo internaciones - agrupada |
@@ -75,7 +74,9 @@ Para el cálculo de las tasas se utiliza el total de población como denominador
 
 En cuanto a la categoría de persona, se toman diferentes estrategias para mostrar la distribución de los casos por edad, dado que dicha variable se halla disponible en la base de datos agrupada de clínica en grupos etarios predefinidos. Además, en determinados eventos se realizaron agrupaciones propias atendiendo a sus características clínicas y epidemiológicas. Estos nuevos grupos, se grafican en función de la evolución de la composición etaria por semanas epidemiológicas, a fin de poder valorar la existencia o no de estacionalidad en relación a este aspecto.
 
-Por último, en relación a la variable sexo, la misma se imputa a partir de los datos provenientes del Registro Nacional de las Personas (ReNaPer). El tipo de registros disponibles no posibilita aún incorporar la noción de género.
+Por último, en relación a la variable sexo, la misma se imputa a partir de los datos provenientes del Re-
+
+gistro Nacional de las Personas (ReNaPer). El tipo de registros disponibles no posibilita aún incorporar la noción de género.
 
 \newpage
 
@@ -101,11 +102,11 @@ dffdfd
 
 ## **Diarrea aguda**
 
-|                                         |
-|-----------------------------------------|
-| **Diarrea aguda**                       |
-| `r DA_cantidad_SE_BEM`                  |
-| Variación `r DA_variacion_porcentual` % |
+```{r, echo=FALSE, fig.width=14, fig.height=2}
+
+indicador_diarreas
+
+```
 
 En las semanas analizadas, se notificaron un total de `r DA_cantidad_SE_BEM` casos de diarrea aguda a nivel provincial. Hubo una disminución del `r DA_variacion_porcentual` % en relación al mismo periodo del año anterior.
 
@@ -152,19 +153,22 @@ DA_grafico_regiones
 
 `r ANIO_max` . Provincia del Neuquén.
 
-![](images/clipboard-473652887.png){fig-align="center" width="526"}
+![](DA_corredor.png){fig-align="center" width="513"}
 
 \newpage
 
 ## **Internaciones por lesiones en el hogar**
 
-INDICADOR
+```{r, echo=FALSE,fig.width=14,fig.height=6}
+library(grid)
+grid.draw(indicador_lesiones)
+```
 
 ### Distribución temporal de internaciones por lesiones en el hogar por semana epidemiológica.
 
 Desde SE 21/2023 hasta SE `r SE_max` /`r ANIO_max` . Provincia del Neuquén. Provincia del Neuquén (n = `r lesiones_total`)
 
-```{r, echo=FALSE,fig.width=12, fig.height=8}
+```{r, echo=FALSE,fig.width=12, fig.height=7}
 lesiones_grafico_evolutivo
 
 ```
@@ -173,7 +177,9 @@ lesiones_grafico_evolutivo
 
 ## **Lesiones por mordedura de perro (ambulatorias)**
 
-INDICADOR
+```{r, echo=FALSE,fig.width=20,fig.height=6}
+grid.draw(indicador_mordedura)
+```
 
 ### Distribución temporal de mordedura de perro por semana epidemiológica.
 
@@ -189,7 +195,7 @@ mordeduras_grafico_evolutivo
 
 Desde SE `r SE_min` hasta SE `r SE_max` de los años 2020 hasta `r ANIO_max` . Provincia del Neuquén.
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 mordedura_incidencia_grafico
 ```
 
@@ -197,7 +203,10 @@ mordedura_incidencia_grafico
 
 ## **Internaciones por siniestros viales**
 
-INDICADOR
+```{r, echo = FALSE , warning=FALSE, fig.width=20,fig.height=6}
+grid.draw(indicador_accidentes)
+indicador_accidentes
+```
 
 En las semanas analizadas, se notificaron un total de `r siniestros_viales_SEBEM` internaciones por siniestros viales.
 
@@ -242,9 +251,11 @@ Desde SE 1/2022 hasta SE OBJETO SE MAX/ AÑO MAX. Provincia del Neuquén (n = OB
 
 ## **Infecciones inmunoprevenibles**
 
-INDICADOR
+```{r, echo=FALSE,fig.width=14,fig.height=2}
+indicador_varicela
+```
 
-En las semanas analizadas, se notificaron un total de `r varicela_SEBEM` casos de varicela a nivel provincial. La variación porcentual es del `r IP_variacion_porcentual` % con respecto al mismo periodo del año anterior.
+En las semanas analizadas, se notificaron un total de `r varicela_SEBEM` casos de varicela a nivel provincial. La variación porcentual es del `r varicela_variacion_porcentual` % con respecto al mismo periodo del año anterior.
 
 ### Distribución temporal de casos de infecciones inmunoprevenibles por semana epidemiológica, según tipo de infección.[^7]
 
@@ -252,7 +263,7 @@ En las semanas analizadas, se notificaron un total de `r varicela_SEBEM` casos d
 
 Desde SE 1/2020 hasta SE `r SE_max` /`r ANIO_max` . Provincia del Neuquén (n = `r IP_total` )
 
-```{r, echo=FALSE,fig.width=33, fig.height=15}
+```{r, echo=FALSE,fig.width=33, fig.height=20}
 IP_grafico_evolutivo
 ```
 
